More usages of collections factory methods available in Java 9+ (List.of(), etc.).
Reverted to old collections methods in the cases necessary to maintain compatibility with Jackson.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>